Bug 428635 - shortcut for screenshot tool not working
Summary: shortcut for screenshot tool not working
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.20.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-03 11:25 UTC by Germano Massullo (Thetra)
Modified: 2020-11-10 23:43 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Germano Massullo (Thetra) 2020-11-03 11:25:52 UTC
After having upgraded to Plasma 5.20.x, the Plasma system settings shortcut "start screenshot tool" is no longer working and I have to run Spectacle manually

spectacle-20.08.2-1.fc33.x86_64
KDE Frameworks 5.75.0
Qt 5.15.1
Comment 1 Bug Janitor Service 2020-11-03 13:15:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/spectacle/-/merge_requests/37
Comment 2 David Redondo 2020-11-04 08:10:41 UTC
Git commit 014c89fc2335be26348d348903b4415993a4cf2f by David Redondo.
Committed on 04/11/2020 at 08:05.
Pushed by davidre into branch 'master'.

Unhide window if it is hidden
FIXED-IN: 20.12.0

M  +3    -0    src/SpectacleCore.cpp

https://invent.kde.org/graphics/spectacle/commit/014c89fc2335be26348d348903b4415993a4cf2f