Unhide window if it is hidden

BUG:428635
FIXED-IN: 20.12.0